--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,4 @@ RewriteRule ^api/(.*)$ /backend/index.php [L,QSA]
 RewriteCond %{REQUEST_URI} !^/api
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-# RewriteRule ^/frontend/index.html [L,QSA]
-RewriteRule ^/index.html [L,QSA]
-
-# Не получилось с папкой frontend. Пришлось фронт кинуть в корневую папку.
+# RewriteRule ^/dist/index.html [L,QSA]
