--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ RewriteEngine On
 RewriteCond %{REQUEST_URI} ^/api
 RewriteRule ^api/(.*)$ /backend/index.php [L,QSA]
 
-# Все остальные запросы перенаправляем на index.html в папке frontend
+# Все остальные запросы перенаправляем на index.html в папке dist
 RewriteCond %{REQUEST_URI} !^/api
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
